fixed z-index of login menu

--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ img.logo {
 }
 
 #preview{
-    z-index: 1000;
+    z-index: 995;
     border-radius: 4px;
     font-family: 'Assistant', sans-serif;
     background-color: rgba(38, 50, 56, 0.8);
